tests/neg/i1642.scala
class Test2(val valueVal: Test2) extends AnyVal // error: value class cannot wrap itself
